// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "floecat/common/common.proto";
import "floecat/catalog/table.proto";

import "google/protobuf/timestamp.proto";

message UpstreamStamp {
  TableFormat system = 1;
  string table_native_id = 2;
  string commit_ref = 3;
  google.protobuf.Timestamp fetched_at = 4;
  map<string,string> properties = 99;
}

message Ndv {
  oneof mode {
    int64 exact = 1;
    NdvApprox approx = 2;
  }

  repeated NdvSketch sketches = 20;
}

message NdvApprox {
  double estimate = 1;
  double relative_standard_error = 2;
  double confidence_lower = 3;
  double confidence_upper = 4;
  double confidence_level = 5;
  uint64 rows_seen = 10;
  uint64 rows_total = 11;
  string method = 20;
  map<string,string> properties = 99;
}

message NdvSketch {
  string type = 1;
  bytes data = 2;
  string encoding = 3;
  string compression = 4;
  uint32 version = 5;
  map<string,string> properties = 99;
}

// ---------- Table-level stats ----------

message TableStats {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  UpstreamStamp upstream = 3;
  int64 row_count = 10;
  int64 data_file_count = 11;
  int64 total_size_bytes = 12;
  Ndv ndv = 20;
  map<string, string> properties = 99;
}

// ---------- Column-level stats  ----------

message ColumnStats {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  int64 column_id = 3;
  string column_name = 4;
  string logical_type = 5;
  UpstreamStamp upstream = 6;
  int64 value_count = 9;
  int64 null_count = 10;
  int64 nan_count = 11;
  Ndv ndv = 12;
  string min = 20;
  string max = 21;
  bytes histogram = 30;
  bytes tdigest = 31;
  map<string, string> properties = 99;
}

// ---------- File-level stats ------------

message FileColumnStats {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  string file_path = 3;
  string file_format = 4;
  int64 row_count = 5;
  int64 size_bytes = 6;
  repeated ColumnStats columns = 7;
  FileContent file_content = 8;
  string partition_data_json = 9;
  int32 partition_spec_id = 10;
  repeated int32 equality_field_ids = 11;
  optional int64 sequence_number = 12;
}

enum FileContent {
  FC_UNSPECIFIED = 0;
  FC_DATA = 1;
  FC_POSITION_DELETES = 2;
  FC_EQUALITY_DELETES = 3;
}

// ---------- Requests/Responses ----------

message PutTableStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  TableStats stats = 3;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 4;
}
message PutTableStatsResponse {
  TableStats stats = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message PutColumnStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  repeated ColumnStats columns = 3;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 4;
}
message PutColumnStatsResponse {
  int32 upserted = 1;
}

message PutFileColumnStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  repeated FileColumnStats files = 3;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 4;
}
message PutFileColumnStatsResponse {
  int32 upserted = 1;
}

message GetTableStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.SnapshotRef snapshot = 2;
  ai.floedb.floecat.common.PageRequest page = 3;
}
message GetTableStatsResponse {
  TableStats stats = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message ListColumnStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.SnapshotRef snapshot = 2;
  ai.floedb.floecat.common.PageRequest page = 3;
}
message ListColumnStatsResponse {
  repeated ColumnStats columns = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message ListFileColumnStatsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.SnapshotRef snapshot = 2;
  ai.floedb.floecat.common.PageRequest page = 3;
}
message ListFileColumnStatsResponse {
  repeated FileColumnStats file_columns = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

// ---------- Services ----------

service TableStatisticsService {
  rpc GetTableStats(GetTableStatsRequest) returns (GetTableStatsResponse);
  rpc ListColumnStats(ListColumnStatsRequest) returns (ListColumnStatsResponse);
  rpc ListFileColumnStats(ListFileColumnStatsRequest) returns (ListFileColumnStatsResponse);
  rpc PutTableStats(PutTableStatsRequest) returns (PutTableStatsResponse);
  rpc PutColumnStats(stream PutColumnStatsRequest)
      returns (PutColumnStatsResponse);
  rpc PutFileColumnStats(stream PutFileColumnStatsRequest)
      returns (PutFileColumnStatsResponse);
}
